--- a/.github/workflows/complex.yml
+++ b/.github/workflows/complex.yml
@@ -4,17 +4,21 @@ jobs:
   ubuntu:
     name: See date on Ubuntu
     runs-on: ubuntu-latest
-    run: date
+    steps:
+      - run: date
   windows:
     name: See date on Windows
     runs-on: windows-latest
-    run: date
+    steps:
+      - run: date
   macos:
     name: See date on MacOS
     runs-on: macos-latest
-    run: date
+    steps:
+      - run: date
   end:
     name: See environment on dependent job
     runs-on: ubuntu-latest
-    run: env
     needs: [ubuntu, windows, macos]
+    steps:
+      - run: date
